--- a/socket/package.json
+++ b/socket/package.json
@@ -4,13 +4,20 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node init.js"
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+    "start:js": "nodemon server.js"
   },
   "dependencies": {
+    "@types/express": "^4.17.11",
+    "@types/socket.io": "^2.1.13",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "nodemon": "^2.0.7",
     "socket.io": "^3.1.1",
-    "socket.io-client": "^3.1.1"
+    "socket.io-client": "^3.1.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
