--- a/socket/tsconfig.json
+++ b/socket/tsconfig.json
@@ -1,9 +1,16 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
-    "target": "ES2015",
+    "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "es2017",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
