--- a/socket/package.json
+++ b/socket/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "nodemon server.js",
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "start:js": "nodemon server.js"
+    "start:js": "nodemon server.js",
+    "start:ts": "ts-node src/index.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.11",
